// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`button > render 1`] = `
"<div><button class="nova-button" type="button" data-nova-theme="light">
    <!---->Button
  </button><button class="nova-button nova-button-primary" type="button" data-nova-theme="light">
    <!---->Primary
  </button><button class="nova-button" type="button" data-nova-theme="light" disabled="">
    <!---->Disabled
  </button></div>"
`;

exports[`button > render with icon prop 1`] = `
"<div><button class="nova-button" type="button" data-nova-theme="light"><span class="nova-button-icon">🚀</span>Launch</button><button class="nova-button" type="button" data-nova-theme="light"><span class="nova-button-icon"><span>Icon</span></span>With Icon</button><button class="nova-button nova-button-icon-only" type="button" data-nova-theme="light"><span class="nova-button-icon">⭐</span>
    <!---->
  </button></div>"
`;

exports[`button > render with slot icon (backward compatibility) 1`] = `
"<div><button class="nova-button" type="button" data-nova-theme="light"><span class="nova-button-icon">🚀</span>Launch</button><button class="nova-button nova-button-icon-only" type="button" data-nova-theme="light"><span class="nova-button-icon">⭐</span>
    <!---->
  </button></div>"
`;
